# task-droid-ai

./: CHECKLIST_COMPLETION.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: task_plan_schema.json
data/gold/: README.md  android_gold_annotation_template_v1.csv  android_gold_seed_v1.jsonl  android_gold_v1_approved.jsonl
data/models/: sklearn_android_classifier.pkl  torch_android_classifier.pt  torch_vectorizer.pkl
data/processed/: sft_all.jsonl  sft_test.jsonl  sft_train.jsonl  sft_train_smoke.jsonl  sft_val.jsonl  sft_val_smoke.jsonl
data/raw/: prompt_labels.csv  prompt_plans.jsonl  test.jsonl  train.jsonl  val.jsonl
data/reports/: out_of_box_android_prompt_eval_20260605.md  planner_quality_report.json  sklearn_test_report.json  taskdroid_android_planner_v1_external_prompt_eval_20260606.csv  torch_classifier_metrics.json  (+2 more)
docs/: gold_dataset_rubric.md
scripts/: build_gold_approved_dataset.py  build_sft_dataset.py  check_coverage_thresholds.py  check_gold_readiness.py  create_gold_dataset.py  evaluate_baseline_classifier.py  evaluate_planner_outputs.py  generate_seed_dataset.py  release_gates.py  run_api.sh  run_full_pipeline.py  run_prod_stack.sh  serve_vllm.sh  setup_vllm_runtime.sh  train_baseline_classifier.py  train_gpt_oss_planner.py  train_lora_planner.py  train_torch_classifier.py
tests/: test_api.py  test_baseline_classifier.py  test_build_sft_dataset.py  test_cli.py  test_contract_snapshots.py  test_data_io.py  test_guardrails.py  test_inference.py  test_rule_planner.py  test_run_prod_stack.py  test_vllm_backend.py
(+19 files in other folders)
